--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="main.js" defer></script>
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"
+        defer></script>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
         <h6>Select size</h6>
         <button id="popup" class="btn btn-danger">Select</button>
     </div>
-    <div class="container"></div>
+    <div class="board"></div>
     <div class="footer">
         <button class="btn btn-warning">Black</button>
         <button class="btn btn-warning">Random</button>
