--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <h6>Select size</h6>
         <button id="popup" class="btn btn-danger">Select</button>
     </div>
+    <p id="message"></p>
     <div class="board"></div>
     <div class="footer">
         <button class="btn btn-warning">Black</button>
