--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <p id="message"></p>
     <div class="board"></div>
     <div class="footer">
-        <button class="btn btn-warning">Black</button>
-        <button class="btn btn-warning">Random</button>
-        <button class="btn btn-warning">Reset</button>
+        <button class="btn btn-warning" id="black" onclick="setColor('black')">Black</button>
+        <button class="btn btn-warning" id="random" onclick="setColor('random')">Random</button>
+        <button class="btn btn-warning" id="reset" onclick="resetBoard()">Reset</button>
     </div>
 </body>
 
